# evolutionary-algorithms

./: .gitignore  README.md  algoritmos-evolutivos-grupo-c.geany  compile.sh  compile_cpp.sh  run.sh
combat-native-cpp/: .gitignore  CMakeLists.txt  Makefile  combat_app  combat_test
combat-native-cpp/include/: anchors.hpp  combat_engine.hpp  genome_decode.hpp  instance.hpp  main.hpp  org_evol_Poc.h  org_evol_RPGNativeBridge.h  player.hpp  rng.hpp  rng_context.hpp  rng_tags.hpp  team.hpp
combat-native-cpp/src/: a.out  anchors.cpp  combat_engine.cpp  combat_jni.cpp  genome_decode.cpp  instance.cpp  main.cpp  player.cpp  rng.cpp  rng_context.cpp  team.cpp  test_build.cpp
evolver-java/: cp.txt  instance_config.py  instance_fitness.py  parse_best.py  parse_best_complete.py  parse_logs.py  parsed_logs.csv  pom.xml  results_inst=BALANCED_pop=50_p0=0.002_cross=0.75.csv  results_inst=BALANCED_pop=50_p0=0.02_cross=0.5.csv  results_inst=BALANCED_pop=50_p0=0.05_cross=0.25.csv  results_inst=BALANCED_pop=50_p0=0.05_cross=0.5.csv  results_inst=EXPONENTIAL_pop=50_p0=0.002_cross=0.25.csv  results_inst=EXPONENTIAL_pop=50_p0=0.02_cross=0.25.csv  results_inst=EXPONENTIAL_pop=50_p0=0.02_cross=0.75.csv  results_inst=PIECEWISE_pop=50_p0=0.02_cross=0.25.csv  results_inst=PIECEWISE_pop=50_p0=0.02_cross=0.5.csv  results_inst=PIECEWISE_pop=50_p0=0.05_cross=0.75.csv  top10_best_stats.csv  top10_best_stats_by_config.csv
evolver-java/calibration_1/: fitness_seed=10_pop=50_p0=0.002_cross=0.25_inst=EXPONENTIAL_20251214_2003.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.25_inst=EXPONENTIAL_HOF_20251214_2003.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.25_inst=EXPONENTIAL_TOP10_20251214_2003.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.25_inst=PIECEWISE_20251214_2004.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.50_inst=BALANCED_HOF_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.50_inst=EXPONENTIAL_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.50_inst=EXPONENTIAL_HOF_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.50_inst=PIECEWISE_HOF_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.50_inst=PIECEWISE_TOP10_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.75_inst=BALANCED_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.75_inst=BALANCED_TOP10_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.75_inst=EXPONENTIAL_TOP10_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.75_inst=PIECEWISE_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.002_cross=0.75_inst=PIECEWISE_HOF_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.25_inst=BALANCED_HOF_20251214_2005.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.25_inst=PIECEWISE_20251214_2004.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.25_inst=PIECEWISE_TOP10_20251214_2004.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=BALANCED_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=BALANCED_HOF_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=BALANCED_TOP10_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=EXPONENTIAL_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=EXPONENTIAL_HOF_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=EXPONENTIAL_TOP10_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=PIECEWISE_HOF_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.50_inst=PIECEWISE_TOP10_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.75_inst=BALANCED_HOF_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.75_inst=EXPONENTIAL_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.75_inst=EXPONENTIAL_HOF_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.75_inst=PIECEWISE_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.020_cross=0.75_inst=PIECEWISE_TOP10_20251214_2009.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=BALANCED_TOP10_20251214_2006.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=EXPONENTIAL_HOF_20251214_2005.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=PIECEWISE_20251214_2005.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=PIECEWISE_HOF_20251214_2005.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=PIECEWISE_TOP10_20251214_2005.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.50_inst=BALANCED_HOF_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.50_inst=BALANCED_TOP10_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.50_inst=EXPONENTIAL_TOP10_20251214_2007.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.50_inst=PIECEWISE_HOF_20251214_2008.csv  fitness_seed=10_pop=50_p0=0.050_cross=0.75_inst=BALANCED_HOF_20251214_2010.csv  (+1113 more)
evolver-java/calibration_2/: fitness_seed=10_pop=50_p0=0.050_cross=0.25_inst=BALANCED_20251215_0001.csv  (+206 more)
(+10720 files in other folders)
